src/main/java/com/example/team_work_management/exception/error/VerificationCodeExpiredException.java
package com.example.team_work_management.exception.error;

public class VerificationCodeExpiredException extends RuntimeException{
    public VerificationCodeExpiredException(String message){
        super(message);
    }
}
